--- a/SabadBan/SabadBan/IndexDetailHeader.xib
+++ b/SabadBan/SabadBan/IndexDetailHeader.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -26,11 +26,6 @@
                         <constraint firstItem="OeZ-E7-BAl" firstAttribute="centerY" secondItem="0ls-ce-fFd" secondAttribute="centerY" id="7sm-9g-qJP"/>
                         <constraint firstItem="OeZ-E7-BAl" firstAttribute="centerX" secondItem="0ls-ce-fFd" secondAttribute="centerX" id="fvg-qR-bw7"/>
                     </constraints>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                            <real key="value" value="3"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -43,6 +38,7 @@
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="backView" destination="0ls-ce-fFd" id="hcL-IR-Ju0"/>
                 <outlet property="lblTitle" destination="OeZ-E7-BAl" id="emB-Ot-PuT"/>
             </connections>
             <point key="canvasLocation" x="334.5" y="134.5"/>
