--- a/SabadBan/SabadBan/MarketDetailsHeader.xib
+++ b/SabadBan/SabadBan/MarketDetailsHeader.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -26,11 +26,6 @@
                         <constraint firstItem="lnj-Bl-FJs" firstAttribute="centerX" secondItem="vrq-uZ-7Jn" secondAttribute="centerX" id="4MF-VS-9iG"/>
                         <constraint firstItem="lnj-Bl-FJs" firstAttribute="centerY" secondItem="vrq-uZ-7Jn" secondAttribute="centerY" id="Y2h-fv-gYK"/>
                     </constraints>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                            <real key="value" value="3"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.96862745098039216" green="0.70980392156862748" blue="0.14117647058823529" alpha="1" colorSpace="calibratedRGB"/>
@@ -42,6 +37,7 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="backView" destination="vrq-uZ-7Jn" id="vDN-wf-tZW"/>
                 <outlet property="lblTitle" destination="lnj-Bl-FJs" id="nXS-j4-o3j"/>
             </connections>
             <point key="canvasLocation" x="1015" y="270.5"/>
